--- a/client/src/components/TodosPage/TodoMini/TodoMini.module.less
+++ b/client/src/components/TodosPage/TodoMini/TodoMini.module.less
@@ -2,28 +2,66 @@
 
 
 .container {
+  display: flex;
+  flex-direction: column;
   background-color: @color5;
   border-radius: 8px;
   padding: 5px 15px;
 
-  .header{
-    margin-bottom: 15px;
+  gap: 8px;
+
+  &.failed {
+    background-color: #fdb0b0 !important;
+  }
+
+  .header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 
     .name {
-      font-size: 21px;
+      font-size: 20px;
+      font-weight: 500;
+      text-overflow: ellipsis;
+      overflow: hidden;
+    }
+
+    .delete {
+      font-size: 36px;
+      line-height: 20px;
+      overflow: hidden;
+      transition: 0.4s;
+      cursor: pointer;
+      user-select: none;
+
+      &:hover {
+        color: @color3;
+      }
     }
   }
   .main {
-    margin-bottom: 10px;
+    margin: 0 10px;
 
     .desc {
       font-size: 12px;
+      white-space: break-spaces;
+      hyphens: auto;
+      overflow-wrap: anywhere;
+
+      display: -webkit-box;
+      -webkit-line-clamp: 6;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
     }
   }
   .footer {
     display: flex;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    gap: 3px;
+
+    .param_name {
+      font-weight: 500;
+    }
 
     .datetime {
       font-size: 13px;
