--- a/client/src/less/variables.less
+++ b/client/src/less/variables.less
@@ -8,8 +8,8 @@
 @textColor1: #222222;
 @textColor2: #fafafa;
 @textColor3: #626262;
-@okColor: #239423;
-@errorColor: #b2493f;
+@okColor: #27e027;
+@errorColor: #ea3a3a;
 
 @headerHeight: 48px;
 
