--- a/client/src/components/NotFound/NotFound.module.less
+++ b/client/src/components/NotFound/NotFound.module.less
@@ -3,20 +3,21 @@
 .container{
   padding: 15px 0;
   height: 100%;
-  
+
   .content {
     height: 100%;
-    
+
     display:flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    
+    color: @textColor2;
+
     .error404 {
       @media (max-width: @md3) {
         font-size: 128px;
       }
-      
+
       font-size: 256px;
       font-weight: 600;
       line-height: initial;
@@ -25,7 +26,7 @@
       @media (max-width: @md3) {
         font-size: 32px;
       }
-      
+
       font-size: 42px;
       text-align: center;
     }
