--- a/client/src/components/Page/Header/Header.module.css
+++ b/client/src/components/Page/Header/Header.module.css
@@ -1,56 +1,56 @@
-.container {
+.header {
   position: sticky;
   top: 0;
   z-index: 99;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   background: #1b0e2c;
-  height: 48px;
 }
-.container .content {
-  height: 100%;
+.header .container {
   max-width: 1096px;
-  display: flex;
   margin: 0 auto;
 }
 @media (max-width: 1108px) {
-  .container .content {
+  .header .container {
     max-width: 970px;
   }
 }
 @media (max-width: 991.98px) {
-  .container .content {
+  .header .container {
     max-width: 750px;
   }
 }
 @media (max-width: 767.98px) {
-  .container .content {
+  .header .container {
     max-width: none;
     padding: 0 10px;
   }
 }
-.container .content .navigation {
+.header .container .body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 100%;
+  height: 48px;
   color: #fafafa;
 }
-.container .content .navigation .link {
+.header .container .body .navigation {
+  flex: 1;
+  position: relative;
+}
+.header .container .body .navigation .links_list {
+  display: flex;
+  align-items: center;
+}
+.header .container .body .navigation .links_list > *:not(:last-child) {
+  margin-right: 36px;
+}
+.header .container .body .link {
   transition: 0.25s;
   font-size: 18px;
   font-weight: 500;
   border-bottom: 2px solid transparent;
   cursor: pointer;
-  margin-left: auto;
 }
-.container .content .navigation .link:hover {
+.header .container .body .link:hover {
   border-bottom: 2px solid #fafafa;
-}
-.container .content .navigation .links_list {
-  display: flex;
-  align-items: center;
-}
-.container .content .navigation .links_list > *:not(:last-child) {
-  margin-right: 10px;
 }
 /*# sourceMappingURL=Header.module.css.map */
