--- a/client/src/components/TodosPage/TodoMini/TodoMini.module.css
+++ b/client/src/components/TodosPage/TodoMini/TodoMini.module.css
@@ -1,24 +1,56 @@
 .container {
+  display: flex;
+  flex-direction: column;
   background-color: #e8d8f2;
   border-radius: 8px;
   padding: 5px 15px;
+  gap: 8px;
+}
+.container.failed {
+  background-color: #fdb0b0 !important;
 }
 .container .header {
-  margin-bottom: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 .container .header .name {
-  font-size: 21px;
+  font-size: 20px;
+  font-weight: 500;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.container .header .delete {
+  font-size: 36px;
+  line-height: 20px;
+  overflow: hidden;
+  transition: 0.4s;
+  cursor: pointer;
+  user-select: none;
+}
+.container .header .delete:hover {
+  color: #515665;
 }
 .container .main {
-  margin-bottom: 10px;
+  margin: 0 10px;
 }
 .container .main .desc {
   font-size: 12px;
+  white-space: break-spaces;
+  hyphens: auto;
+  overflow-wrap: anywhere;
+  display: -webkit-box;
+  -webkit-line-clamp: 6;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
 }
 .container .footer {
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: column;
+  gap: 3px;
+}
+.container .footer .param_name {
+  font-weight: 500;
 }
 .container .footer .datetime {
   font-size: 13px;
