--- a/client/src/components/TodosPage/TodosPage.module.less
+++ b/client/src/components/TodosPage/TodosPage.module.less
@@ -1,4 +1,5 @@
 @import "../../less/variables";
+@import "../../less/customScroll";
 
 .container {
   height: 100%;
@@ -12,49 +13,85 @@
     border-radius: 8px;
     padding: 20px;
 
-    .message {
-      font-size: 15px;
-      color: @textColor2;
-    }
-
-    .overlay {
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      width: 100%;
+    .content {
+      display: flex;
+      gap: 7px;
       height: 100%;
-      background-color: rgba(0,0,0,0.1);
 
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .todos_list {
-      display: flex;
-      flex-direction: column;
-      overflow-y: scroll;
-      flex: 1;
-
-      padding-right: 10px;
-
-      gap: 10px;
-
-      &::-webkit-scrollbar {
-        width: 10px;
+      .message {
+        flex: 1;
+        font-size: 15px;
+        color: @textColor2;
       }
 
-      &::-webkit-scrollbar-track {
-        background-color: @color2;
-        border-radius: 10px;
+      .overlay {
+        flex: 1;
+        width: 100%;
+        height: 100%;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        filter: invert();
       }
 
-      &::-webkit-scrollbar-thumb {
-        background: @color5;
-        box-shadow: inset 0 0 6px rgba(0,0,0, 0.1);
-        border-radius: 10px;
+      .todos {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        gap: 5px;
+
+        @media(max-width: @md4) {
+          gap: 3px;
+        }
+
+        .options {
+          display: flex;
+          align-items: center;
+
+          @media(max-width: @md4) {
+            font-size: 12px;
+          }
+
+          .button {
+            border-radius: 5px;
+            border: none;
+            outline: none;
+            padding: 3px 4px;
+            background-color: @color7;
+            transition: 0.4s;
+
+            &:hover {
+              background-color: @color5;
+            }
+          }
+
+          .sort {
+            margin-left: auto;
+
+            .select {
+              border-radius: 5px;
+              padding: 1px 2px;
+              outline: none;
+              border: none;
+            }
+          }
+        }
+
+        .todos_list {
+          display: flex;
+          flex-direction: column;
+          overflow-y: scroll;
+          flex: 1;
+
+          padding-right: 6px;
+
+          gap: 10px;
+
+          .scroll();
+        }
+
       }
     }
   }
