added status to todo; added todo color depending on its status\expiration; fixed todos get request (now user get only its todos); fixed todo delete request (now user can delete only todo it owns); fixed logout (now refresh token removes from db too not only from cookies);

--- a/client/src/components/AuthModal/AuthModal.module.css
+++ b/client/src/components/AuthModal/AuthModal.module.css
@@ -117,9 +117,7 @@
 .container .content .form {
   display: flex;
   flex-direction: column;
-}
-.container .content .form > *:not(:last-child) {
-  margin-bottom: 30px;
+  gap: 30px;
 }
 .container .content .form .fields {
   display: flex;
