--- a/client/src/components/TodoPage/FeaturesBar/FeaturesBar.module.less
+++ b/client/src/components/TodoPage/FeaturesBar/FeaturesBar.module.less
@@ -38,12 +38,12 @@
   }
 
   .delete {
-    color: @errorColor;
+    color: @errorColorDark;
     font-size: 36px;
     font-weight: 500;
   }
 
   .active {
-    color: @okColor;
+    color: @okColorDark;
   }
 }
