--- a/client/src/less/variables.less
+++ b/client/src/less/variables.less
@@ -8,8 +8,10 @@
 @textColor1: #222222;
 @textColor2: #fafafa;
 @textColor3: #626262;
-@okColor: #27e027;
-@errorColor: #ea3a3a;
+@okColorDark: #27e027;
+@okColorLight: #a1faa1;
+@errorColorDark: #ea3a3a;
+@errorColorLight: #fca1a1;
 
 @headerHeight: 48px;
 
