--- a/client/src/components/AuthModal/AuthModal.module.less
+++ b/client/src/components/AuthModal/AuthModal.module.less
@@ -139,10 +139,7 @@
     .form {
       display: flex;
       flex-direction: column;
-
-      & > *:not(:last-child) {
-        margin-bottom: 30px;
-      }
+      gap: 30px;
 
       .fields {
         display: flex;
@@ -168,12 +165,12 @@
       }
 
       .error {
-        color: @errorColor;
+        color: @errorColorDark;
         font-size: 16px;
       }
 
       .success {
-        color: @okColor;
+        color: @okColorDark;
         font-size: 16px;
       }
 
