--- a/client/src/components/TodosPage/TodoMini/TodoMini.module.css
+++ b/client/src/components/TodosPage/TodoMini/TodoMini.module.css
@@ -6,13 +6,20 @@
   padding: 5px 15px;
   gap: 8px;
 }
+.container.completed {
+  background-color: #e7ffe7 !important;
+}
 .container.failed {
-  background-color: #fdb0b0 !important;
+  background-color: #ffdcdc !important;
 }
 .container .header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  gap: 5px;
+}
+.container .header .checkbox {
+  min-width: 14px;
+  min-height: 14px;
 }
 .container .header .name {
   font-size: 20px;
@@ -21,8 +28,11 @@
   overflow: hidden;
 }
 .container .header .delete {
+  flex-shrink: 0;
+  margin-left: auto;
   font-size: 36px;
   line-height: 20px;
+  width: 20px;
   overflow: hidden;
   transition: 0.4s;
   cursor: pointer;
