--- a/client/src/components/TodosPage/TodosPage.module.css
+++ b/client/src/components/TodosPage/TodosPage.module.css
@@ -24,8 +24,10 @@
 }
 .container .content_container .content {
   display: flex;
+  flex: 1;
   gap: 7px;
   height: 100%;
+  width: 100%;
 }
 .container .content_container .content .message {
   flex: 1;
@@ -42,10 +44,11 @@
   filter: invert();
 }
 .container .content_container .content .todos {
+  flex: 1;
   display: flex;
   flex-direction: column;
-  flex: 1;
   gap: 5px;
+  min-width: 0;
 }
 @media (max-width: 479.98px) {
   .container .content_container .content .todos {
