--- a/client/src/components/TodosPage/TodosPage.module.less
+++ b/client/src/components/TodosPage/TodosPage.module.less
@@ -15,8 +15,10 @@
 
     .content {
       display: flex;
+      flex: 1;
       gap: 7px;
       height: 100%;
+      width: 100%;
 
       .message {
         flex: 1;
@@ -37,10 +39,11 @@
       }
 
       .todos {
+        flex: 1;
         display: flex;
         flex-direction: column;
-        flex: 1;
         gap: 5px;
+        min-width: 0;
 
         @media(max-width: @md4) {
           gap: 3px;
