--- a/client/src/components/CreateTodoPage/CreateTodoPage.module.css
+++ b/client/src/components/CreateTodoPage/CreateTodoPage.module.css
@@ -38,6 +38,19 @@
   font-size: 14px;
   padding: 0 10px;
 }
+.container .content_container .content .form .fields .label .textarea {
+  background-color: #ececec;
+  border-radius: 10px;
+  box-shadow: 2px 4px 4px 0 rgba(0, 0, 0, 0.25);
+  padding: 7px 10px;
+  font-size: 12px;
+  resize: none;
+  outline: none;
+  border: none;
+}
+.container .content_container .content .form .fields .label .textarea::placeholder {
+  color: #515665;
+}
 .container .content_container .content .form .fields .label .input {
   background-color: #ececec;
   border-radius: 10px;
@@ -46,9 +59,6 @@
   font-size: 12px;
   outline: none;
   border: none;
-}
-.container .content_container .content .form .fields .label .input:not(:last-child) {
-  margin-bottom: 20px;
 }
 .container .content_container .content .form .fields .label .input::placeholder {
   color: #515665;
