--- a/client/src/components/CreateTodoPage/CreateTodoPage.module.less
+++ b/client/src/components/CreateTodoPage/CreateTodoPage.module.less
@@ -41,6 +41,22 @@
             font-size: 14px;
             padding: 0 10px;
 
+            .textarea {
+              background-color: @color6;
+              border-radius: 10px;
+              box-shadow: 2px 4px 4px 0 rgba(0, 0, 0, 0.25);
+              padding: 7px 10px;
+              font-size: 12px;
+              resize: none;
+
+              outline: none;
+              border: none;
+
+              &::placeholder {
+                color: @color3;
+              }
+            }
+
             .input {
               background-color: @color6;
               border-radius: 10px;
@@ -50,10 +66,6 @@
 
               outline: none;
               border: none;
-
-              &:not(:last-child) {
-                margin-bottom: 20px;
-              }
 
               &::placeholder {
                 color: @color3;
