--- a/client/src/components/TodosPage/TodosPage.module.css
+++ b/client/src/components/TodosPage/TodosPage.module.css
@@ -1,12 +1,25 @@
-.scroll::-webkit-scrollbar {
+.scroll_light::-webkit-scrollbar {
   width: 10px;
 }
-.scroll::-webkit-scrollbar-track {
+.scroll_light::-webkit-scrollbar-track {
   background-color: #2F3040;
   border-radius: 10px;
 }
-.scroll::-webkit-scrollbar-thumb {
+.scroll_light::-webkit-scrollbar-thumb {
   background: #e8d8f2;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+.scroll_dark::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+.scroll_dark::-webkit-scrollbar-track {
+  background-color: #fafafa;
+  border-radius: 10px;
+}
+.scroll_dark::-webkit-scrollbar-thumb {
+  background: #9a8da1;
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
 }
