--- a/client/src/less/customScroll.css
+++ b/client/src/less/customScroll.css
@@ -1,11 +1,11 @@
-.scroll::-webkit-scrollbar {
+.scroll_light::-webkit-scrollbar {
   width: 10px;
 }
-.scroll::-webkit-scrollbar-track {
+.scroll_light::-webkit-scrollbar-track {
   background-color: #2F3040;
   border-radius: 10px;
 }
-.scroll::-webkit-scrollbar-thumb {
+.scroll_light::-webkit-scrollbar-thumb {
   background: #e8d8f2;
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
