--- a/client/src/less/customScroll.less
+++ b/client/src/less/customScroll.less
@@ -1,6 +1,6 @@
 @import './variables';
 
-.scroll {
+.scroll_light {
   &::-webkit-scrollbar {
     width: 10px;
   }
@@ -16,3 +16,22 @@
     border-radius: 10px;
   }
 }
+
+.scroll_dark {
+  &::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: @color7;
+    border-radius: 10px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: @color4;
+    box-shadow: inset 0 0 6px rgba(0,0,0, 0.1);
+    border-radius: 10px;
+  }
+}
+
