--- a/client/src/components/AuthModal/AuthModal.module.less
+++ b/client/src/components/AuthModal/AuthModal.module.less
@@ -144,6 +144,7 @@
       .fields {
         display: flex;
         flex-direction: column;
+        gap: 20px;
 
         .input {
           background-color: @color6;
